--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "karma, mocha, phantomjs testing setup + testing redux action creators/reducers and react components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start --single-run",
     "devserver": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.dev.js --hot-inline"
   },
   "repository": {
