--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start --single-run",
-    "devserver": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.dev.js --hot-inline"
+    "devserver": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.dev.js --hot-inline",
+    "expserver": "node index.js",
+    "run": "npm run devserver | npm run expserver"
   },
   "repository": {
     "type": "git",
@@ -24,11 +26,13 @@
   "homepage": "https://github.com/wpultz/react-testing-examples#readme",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "classnames": "^2.2.5",
     "express": "^4.13.4",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-form": "^5.2.3",
     "redux-logger": "^2.6.1"
   },
   "devDependencies": {
