--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "karma, mocha, phantomjs testing setup + testing redux action creators/reducers and react components",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ext .js,.jsx ./app/js/",
     "test": "NODE_ENV=testing karma start --single-run",
     "test:cov": "COVERAGE=true NODE_ENV=testing karma start --single-run",
     "devserver": "node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.dev.js --hot-inline",
